Tambah reset request
