# internal/domain/model/user_model.go
@@ -1,5 +1,7 @@
 package model
 
+import "bytes"
+
 type UserResponse struct {
 	ID        string `json:"id"`
 	Name      string `json:"name"`
@@ -37,13 +39,22 @@ type RefreshTokenRequest struct {
 }
 
 type RequestReset struct {
-	Email    string `json:"email" validate:"required,email,lte=100"`
-	Password string `json:"password" validate:"required,min=8,lte=255"`
+	Email string `json:"email" validate:"required,email,lte=100"`
+}
+
+type ResponseReset struct {
+	Status string `json:"status"`
 }
 
 type ResetPassword struct {
 	Token       string `param:"token" validate:"required"`
 	Email       string `json:"email" validate:"required,email,lte=100"`
-	Password    string `json:"password" validate:"required,min=8,lte=255"`
 	NewPassword string `json:"new_password" validate:"required,min=8,lte=255"`
+}
+
+type SendEmail struct {
+	EmailTo   string `json:"email_to" validate:"required,email,lte=100"`
+	EmailFrom string `json:"email_from" validate:"required,email,lte=100"`
+	Subject   string `json:"subject" validate:"required,lte=100"`
+	Body      bytes.Buffer `json:"body" validate:"required"`
 }
